fix horizontal scroll

--- a/2025/divestment-history/static/css/main.css
+++ b/2025/divestment-history/static/css/main.css
@@ -6,6 +6,7 @@ body {
     line-height: 1.6em;
     font-size: 16px;
     font-family: 'Georgia', serif;
+    overflow-x: clip;
 }
 
 /* text */
